<resources>
    <string name="app_name">android-boilerplate</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="okay">Okay</string>
    <string name="oops">Oops</string>
    <string name="alert">Alert</string>
    <string name="cancel">Cancel</string>
    <string name="server_error">Server Error</string>
    <string name="please_confirm">Please confirm</string>
    <string name="general_error">Something went wrong, please try again later!</string>
    <string name="facing_difficulties">We are facing difficulties from server, please try again later!</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_msg">Please check your network settings and try again</string>
    <string name="no_internet_detailed_msg">No Internet Connection, Please check your network settings and try again</string>

    <string name="home">Home</string>
    <string name="navigate_to_destination">Navigate to Destination</string>
    <string name="navigate_with_action">Navigate with Action</string>
    <string name="navigate_next_step">Navigate Next Step</string>
    <string name="step_one">Step One</string>
    <string name="step_two">Step Two</string>
    <string name="finish_flow">Finish Flow</string>
    <string name="send_deep_link_notification">Send Deep Link Notification</string>
    <string name="type_your_deep_link_args">Type your deep link args</string>
    <string name="deep_link">Deep Link</string>
    <string name="settings">Settings</string>
    <string name="source">Source:</string>
    <string name="fetch_repos">Fetch Repos</string>
</resources>
