<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="listener"
            type="com.android.boilerplate.ui.DeepLinkFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_source"
            app:layout_constraintStart_toStartOf="@id/deep_link_args"
            app:layout_constraintBottom_toTopOf="@id/deep_link_args"
            android:text="@string/source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/source"
            app:layout_constraintStart_toEndOf="@id/tv_source"
            app:layout_constraintBottom_toTopOf="@id/deep_link_args"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/deep_link_args"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/type_your_deep_link_args"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send_deep_link_notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{()->listener.sendNotification()}"
            android:text="@string/send_deep_link_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deep_link_args" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>